array.island.Island.scala.error
Compilation error:
Island:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (isConstant(num)) //cas de base ie un seul etage
                ^Island:11: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var tailletr : Int
      ^Island:11: error: local variables must be initialized
  var tailletr : Int
      ^Island:13: error: not found: value taille
  while (debut+taille < num.size){
               ^Island:22: error: not found: type int
    var montagne : Array[int] = new Array[int](tailletr)
                         ^Island:22: error: not found: type int
    var montagne : Array[int] = new Array[int](tailletr)
                                          ^Island:39: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^Island:39: warning: enclosing method isConstant has result type Unit: return value discarded
      return false
      ^Island:41: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return true
         ^Island:41: warning: enclosing method isConstant has result type Unit: return value discarded
  return true
  ^